--- a/src/main/resources/templates/User/user.html
+++ b/src/main/resources/templates/User/user.html
@@ -21,8 +21,8 @@
                         <button class="btn btn-success" onclick="reLoad()">查询</button>
                     </div>
                     <div class="columns pull-right col-md-2 nopadding">
-                        <input id="devId" type="text" class="form-control"
-                               placeholder="设备编号">
+                        <input id="userName" type="text" class="form-control"
+                               placeholder="用户名">
                     </div>
                 </div>
                 <table id="exampleTable" data-mobile-responsive="true">
