--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -78,7 +78,7 @@
                 <div class="navbar-header"><a class="navbar-minimalize minimalize-styl-2 btn btn-primary " href="#"><i class="fa fa-bars"></i> </a>
                     <form role="search" class="navbar-form-custom" method="post" action="search_results.html">
                         <div class="form-group">
-                            <input type="text" style=" color:#FFF; font-size:20px" value="后台管理系统" class="form-control" disabled="disabled" name="top-search" id="top-search">
+                            <input type="text" style=" color:#FFF; font-size:20px" value="设备维护系统" class="form-control" disabled="disabled" name="top-search" id="top-search">
 
                         </div>
                     </form>
