优化登录验证，密码加密，提取全部日志，提取日志优化，界面优化，锁定版本

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -76,6 +76,18 @@
     <div class="input_box">
         <input type="password"  id="password" name="password" placeholder="请输入密码">
     </div>
+    <div>
+        <div class="col-xs-6 pull_left">
+            <div class="form-group">
+                <input autocomplete="off" class="form-control" type="tel" name="verify" id="verify" placeholder="请输入验证码" maxlength="4">
+            </div>
+        </div>
+        <div class="col-xs-6 pull_left">
+            <a href="javascript:void(0);" rel="external nofollow" title="点击更换验证码">
+                <img style="margin-top: 12px;" id="imgVerify" src="" alt="更换验证码" height="36" width="70%" onclick="getVerify(this);">
+            </a>
+        </div>
+    </div>
     <button id="loginBtn" onclick="login()">登录</button><br>
 </div>
 <div th:include="include :: footer"></div>
