--- a/src/main/resources/templates/UploadPackage/uploadPackage.html
+++ b/src/main/resources/templates/UploadPackage/uploadPackage.html
@@ -15,17 +15,21 @@
                             <i class="fa fa-trash hidden" aria-hidden="true"></i>上传更新包
                         </button>
                     </div>
-                    <div class="columns pull-right">
-                        <button class="btn btn-success" onclick="reLoad()">查询</button>
-                    </div>
-                    <div class="columns pull-right col-md-2 ">
-                        <input id="devId" type="text" class="form-control"
-                               placeholder="设备编号">
-                    </div>
-                    <div class="columns pull-right col-md-2 ">
-                        <input id="packageName" type="text" class="form-control"
-                               placeholder="更新包名">
-                    </div>
+                    <form class="form-inline">
+                        <div class="form-group pull-right">
+                            <button class="btn btn-success" onclick="reLoad()">查询</button>
+                        </div>
+                        <div class="form-group pull-right">
+                            <label class="label" style="margin-left: 15px">设备编号：</label>
+                            <input id="devId" type="text" class="form-control"
+                                   placeholder="设备编号">
+                        </div>
+                        <div class="form-group pull-right">
+                            <label class="label" style="margin-left: 15px">更新包名：</label>
+                            <input id="packageName" type="text" class="form-control"
+                                   placeholder="更新包名">
+                        </div>
+                    </form>
                 </div>
                 <table id="exampleTable" data-mobile-responsive="true">
                 </table>
